Uri deprecated. DNB hinzugefügt, da jar vom admin gesperrt.